--- a/index.html
+++ b/index.html
@@ -3,16 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <title>정보 입력</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            background: url('./image/first.png') no-repeat center top;
+            background-size: 100vw; /* 배경 이미지가 컨테이너를 꽉 채우도록 설정 */
+            height: 150vw; /* 배경 이미지의 높이에 맞춤 */
+            width: 100vw; /* 배경 이미지의 너비에 맞춤 */
+            min-height: 100%;
+            overflow: auto;
+        }
+        .form-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 89vw; /* 뷰포트 높이의 100% */
+            width: 84vw;
+        }
+        #userInfoForm {
+            display: flex;
+            /* 폼 내 요소들을 수평으로 배치 */
+        }
+        .input-field {
+            margin: 0 8vw; /* 좌우 마진으로 입력 필드 간 간격 조정 */
+        }
+        .input-field input {
+            width: 100px; /* 입력 필드의 너비를 150px로 설정 */
+            padding: 5px; /* 내부 여백을 5px로 설정 */
+            font-size: 14px; /* 글자 크기를 14px로 설정 */
+        }
+        #userInfoForm button {
+            margin-top: 5vw; /* 버튼의 상단 마진을 20px로 설정 */
+        }
+    </style>
 </head>
 <body>
-    <h2>이름과 학번을 입력해주세요</h2>
+<div class="form-container">
     <form id="userInfoForm">
-        <div>
-            <label for="name">이름:</label>
+        <div class="input-field">
+            <label for="name"></label>
             <input type="text" id="name" name="name" required>
         </div>
-        <div>
-            <label for="studentId">학번:</label>
+        <div class="input-field">
+            <label for="studentId"></label>
             <input type="text" id="studentId" name="studentId" required>
         </div>
         <button type="submit">제출</button>
