--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <button type="submit">제출</button>
     </form>
-
+</div>
     <script>
         document.getElementById('userInfoForm').onsubmit = function(event) {
             event.preventDefault(); // 폼 기본 제출 동작을 방지
