--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             width: 100px; /* 입력 필드의 너비를 150px로 설정 */
             padding: 5px; /* 내부 여백을 5px로 설정 */
             font-size: 14px; /* 글자 크기를 14px로 설정 */
+            border: none; /* 테두리 제거 */
+            background: transparent; /* 배경 투명 */
         }
         #userInfoForm button {
             margin-top: 5vw; /* 버튼의 상단 마진을 20px로 설정 */
@@ -49,7 +51,7 @@
             <label for="studentId"></label>
             <input type="text" id="studentId" name="studentId" required>
         </div>
-        <button type="submit">제출</button>
+        <button type="submit">다음</button>
     </form>
 </div>
     <script>
