--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             margin: 0 8vw; /* 좌우 마진으로 입력 필드 간 간격 조정 */
         }
         .input-field input {
-            width: 100px; /* 입력 필드의 너비를 150px로 설정 */
+            width: 7vw; /* 입력 필드의 너비를 150px로 설정 */
             padding: 5px; /* 내부 여백을 5px로 설정 */
             font-size: 14px; /* 글자 크기를 14px로 설정 */
             border: none; /* 테두리 제거 */
