--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 89vw; /* 뷰포트 높이의 100% */
+            height: 90vw; /* 뷰포트 높이의 100% */
             width: 84vw;
         }
         #userInfoForm {
@@ -36,7 +36,10 @@
             background: transparent; /* 배경 투명 */
         }
         #userInfoForm button {
-            margin-top: 5vw; /* 버튼의 상단 마진을 20px로 설정 */
+            margin-top: 4vw; /* 버튼의 상단 마진을 20px로 설정 */
+            font-size: 25px; /* 버튼 내 텍스트의 크기를 더 크게 설정합니다. */
+            background-color: white;
+            border-color: white;
         }
     </style>
 </head>
