--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             justify-content: center;
             align-items: center;
             height: 90vw; /* 뷰포트 높이의 100% */
-            width: 84vw;
+            width: 85vw;
         }
         #userInfoForm {
             display: flex;
@@ -38,6 +38,7 @@
         #userInfoForm button {
             margin-top: 4vw; /* 버튼의 상단 마진을 20px로 설정 */
             font-size: 25px; /* 버튼 내 텍스트의 크기를 더 크게 설정합니다. */
+            background-color: white;
 
         }
     </style>
