--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             margin-top: 4vw; /* 버튼의 상단 마진을 20px로 설정 */
             font-size: 25px; /* 버튼 내 텍스트의 크기를 더 크게 설정합니다. */
             color: blue;
+            background-color: white;
+            border-color: white;
         }
     </style>
 </head>
