--- a/mainPage.html
+++ b/mainPage.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>좌우 문제 분할 퀴즈</title>
+    <title>내 성적은 April걸?</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
